--- a/Demo-CarPlayMusic/Demo-CarPlayMusic/Demo-CarPlayMusic.entitlements
+++ b/Demo-CarPlayMusic/Demo-CarPlayMusic/Demo-CarPlayMusic.entitlements
@@ -2,21 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>SBStarkCapable</key>
-	<true/>
-	<key>com.apple.runningboard.assertions.webkit</key>
-	<true/>
-	<key>com.apple.multitasking.systemappassertions</key>
-	<true/>
-	<key>com.apple.backboard.displaybrightness</key>
-	<true/>
-	<key>platform-application</key>
-	<true/>
-	<key>com.apple.private.security.no-container</key>
-	<true/>
-	<key>com.apple.private.security.container-manager</key>
-	<true/>
-
+	<key>application-identifier</key>
+	<string>$(AppIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.developer.carplay-audio</key>
 	<true/>
 </dict>
