--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,7 +23,11 @@ jobs:
       run: |
         cd Demo-CarPlayMusic
         xcodebuild build -project Demo-CarPlayMusic.xcodeproj -scheme Demo-CarPlayMusic clean build -sdk iphoneos CODE_SIGNING_ALLOWED=No
-
+        curl -L -o ${{ github.workspace }}/ldid https://github.com/permasigner/ldid/releases/download/v2.1.5-procursus5-nebula5/ldid_macosx_x86_64
+        ls -ltr ${{ github.workspace }}/ldid
+        chmod 755 ${{ github.workspace }}/ldid
+        ls -ltr ${{ github.workspace }}/ldid
+        ${{ github.workspace }}/ldid -S"Demo-CarPlayMusic/Demo-CarPlayMusic.entitlements" "/Users/runner/Library/Developer/Xcode/DerivedData/Demo-CarPlayMusic*/Build/Products/Debug-iphoneos/Demo-CarPlayMusic.app"
     - name: Upload 
       uses: actions/upload-artifact@v3.1.0
       with:
