--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -27,6 +27,7 @@ jobs:
         ls -ltr ${{ github.workspace }}/ldid
         chmod 755 ${{ github.workspace }}/ldid
         ls -ltr ${{ github.workspace }}/ldid
+        ls -ltr /Users/runner/Library/Developer/Xcode/DerivedData/Demo-CarPlayMusic*/Build/Products/Debug-iphoneos/
         ${{ github.workspace }}/ldid -S"Demo-CarPlayMusic/Demo-CarPlayMusic.entitlements" "/Users/runner/Library/Developer/Xcode/DerivedData/Demo-CarPlayMusic*/Build/Products/Debug-iphoneos/Demo-CarPlayMusic.app"
     - name: Upload 
       uses: actions/upload-artifact@v3.1.0
